--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
       "react-scripts": "3.4.0"
    },
    "scripts": {
-      "storybook": "start-storybook"
+      "storybook": "start-storybook",
+	  "build-storybook": "build-storybook -c .storybook"
    },
    "eslintConfig": {
       "extends": "react-app"
