--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
    },
    "scripts": {
       "storybook": "start-storybook",
-	   "build-storybook": "build-storybook -c .storybook -o .out"
+	   "build-storybook": "build-storybook"
    },
    "eslintConfig": {
       "extends": "react-app"
